--- a/libft_minishell/Makefile
+++ b/libft_minishell/Makefile
@@ -1,6 +1,6 @@
 #Variables
 CC = cc
-CFLAGS = -Wall -Wextra -Werror
+CFLAGS = -Wall -Wextra -Werror -fPIE
 NAME = libft.a
 SRCS = ft_isalnum.c ft_isalpha.c ft_isprint.c ft_isascii.c ft_isdigit.c ft_tolower.c ft_toupper.c ft_bzero.c ft_calloc.c ft_memchr.c\
 	ft_memcmp.c ft_memcpy.c ft_memmove.c ft_memset.c ft_strdup.c ft_strndup.c ft_atoi.c ft_itoa.c ft_split.c ft_strchr.c ft_striteri.c\
